2006-06-07 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pm & eSTAR/Broker/Handler.pm: Moved to using
	  <Transport> rather than <VOEvent> XML for acks and iamalives,
	  still echo iamalives from upstream. Also moved to using VOEvent
	  module to build these messages for none RAPTOR or eSTAR hosts.
	  
2006-06-06 Aladair Allan <aa@astro.ex.ac.uk>

	* Moved services off the dying estar.astro.ex.ac.uk machine

        * bin/test_servers.pl: Modified the hardcoded endpoints, added
	  pining of the actual servers as well checks on the software.

	* bin/ogle_parsemail.pl: Modified the harcoded endpoint

        * startup/*: Added the startup scripts into the repository

	* crontab/*: Added the crontab files into the repository

	* etc/rc.d/*: Added the /etc/rc.d/rc.local files into archive
	
2006-05-22 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_test.pl: Fixed STC block in boiler plate test message

2006-05-19 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Moved to VOEvent v1.1
	
	* bin/event_client.pl: Moved to VOEvent v1.1
	
	* bin/event_test.pl: Moved to VOEvent v1.1
	
	* bin/raptor_alert.pl: Moved to VOEvent v1.1
	
	* bin/raptor_gateway.pl: Moved to VOEvent v1.1
	
	* eSTAR/Broker/Handler.pm: Moved to VOEvent v1.1
	
	* bin/ogle_parsemail.pl: Removed redundant UseSTC hash element
	
2006-05-16 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_test.pl: Fixed STC block

2006-04-14 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/gcn_server.pl: Changed to run both initial and burst followup
	  on BAT position. Need to do a Phase 0 lookup at UKIRT somehow so
	  I don't have to manually fiddle this every time we change instruments
	  
2006-05-13 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/ogle_fetch.pl: Fixed code to have alternative OB06xxx
	  representation when passing the name to telescopes, supposrting 
	  Dan's code.

2006-05-11 Alasdair Allan <aa@astro.ex.ac.uk>
