@@ -3,7 +3,9 @@
         * bin/event_broker.pm & eSTAR/Broker/Handler.pm: Moved to using
 	  <Transport> rather than <VOEvent> XML for acks and iamalives,
 	  still echo iamalives from upstream. Also moved to using VOEvent
-	  module to build these messages for none RAPTOR or eSTAR hosts.
+	  module to build these messages for none RAPTOR or eSTAR hosts,
+	  using the new XML::Document::Transport class to build the 
+	  <Transport> messages.
 	  
 2006-06-06 Aladair Allan <aa@astro.ex.ac.uk>
 
